# dnk-cpp-inference-test

./: .clangd  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
